[package]
name = "fluent-test"
version = "0.4.3"
edition = "2024"
authors = ["Romain Laneuville<romain.laneuville@hotmail.fr>"]
description = "A fluent, Jest-like testing library for Rust"
repository = "https://github.com/mister-good-deal/fluent-test"
license = "MIT"
keywords = ["testing", "test", "jest", "fluent", "assertions"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
regex = "1.10.3"
colored = "2.0.4"
lazy_static = "1.4.0"
thread_local = "1.1.8"
once_cell = "1.18.0"
ctor = "0.2.7"
fluent-test-macros = { path = "./fluent-test-macros", version = "0.4.3" }
tokio = { version = "1", features = ["time", "rt"], optional = true }
futures = "0.3.29"

[features]
default = ["async"]
async = ["tokio"]

# Generated examples to demonstrate usage
[[example]]
name = "async_matchers"
path = "examples/async_matchers.rs"
required-features = ["async"]

[[example]]
name = "async_await"
path = "examples/async_await.rs"
required-features = ["async"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
    "fluent-test-macros"
]
